<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AgregaColaboradorActivity">

    <LinearLayout
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:padding="@dimen/paddingGeneral"
        android:orientation="vertical"
        >

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            >
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/ti_nombre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:hint="@string/hint_nombre"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            >
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/ti_correo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:hint="@string/hint_correo"
                />
        </com.google.android.material.textfield.TextInputLayout>




        <Button
            android:id="@+id/bt_agregar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/bt_agregar"
            android:paddingTop="@dimen/paddingGeneral"
            />

        <Button
            android:id="@+id/bt_salir"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/bt_salir"
            android:paddingTop="@dimen/paddingGeneral"
            />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>