<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/linear1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="6"
        android:padding="@dimen/paddingGeneral"
        >


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="2"
                >

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/noimage"
                    android:layout_centerHorizontal="true"
                    android:layout_centerInParent="true"
                    android:scaleType="fitCenter"
                    />

            </RelativeLayout>


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="4"
                android:fillViewport="true"
                android:padding="@dimen/paddingGeneral"
                android:orientation="vertical"
                >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_centerVertical="true"
                    >

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"

                        >
                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/ti_correo"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:singleLine="true"
                            android:hint="@string/hint_correo"
                            />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:passwordToggleEnabled="true"
                        >
                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/ti_pass"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/hint_contraseña"
                            android:inputType="textPassword"
                            />
                    </com.google.android.material.textfield.TextInputLayout>

                    <Button
                        android:id="@+id/bt_iniciar"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/bt_iniciar"
                        android:paddingTop="@dimen/paddingGeneral"
                        />

                    <TextView
                        android:id="@+id/tv_creaCuenta"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/creaCuenta"
                        android:textAlignment="center"
                        android:paddingTop="@dimen/paddingGeneral"
                        >
                    </TextView>

                </LinearLayout>

            </RelativeLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>